syntax = "proto3";

package type_repeated;

option go_package = "xgo/tests/pb/pbreferences";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";

//import "tests/proto/module/external.proto";

//import "tests/proto/cases/references/private.proto";

import "proto/json.proto";

message TypeRepeated1 {
  repeated int32 f_int32a = 1 [ (json.field) = {
    reference: { repeated: { elem: { int32: { codec: Number } } } }
  } ];
  repeated int32 f_int32b = 2 [ (json.field) = {
    reference: { repeated: { elem: { int32: { codec: String } } } }
  } ];

  repeated int64 f_int64a = 3 [ (json.field) = {
    reference: { repeated: { elem: { int64: { codec: Number } } } }
  } ];
  repeated int64 f_int64b = 4 [ (json.field) = {
    reference: { repeated: { elem: { int64: { codec: String } } } }
  } ];

  repeated uint32 f_uint32a = 5 [ (json.field) = {
    reference: { repeated: { elem: { uint32: { codec: Number } } } }
  } ];
  repeated uint32 f_uint32b = 6 [ (json.field) = {
    reference: { repeated: { elem: { uint32: { codec: String } } } }
  } ];

  repeated uint64 f_uint64a = 7 [ (json.field) = {
    reference: { repeated: { elem: { uint64: { codec: Number } } } }
  } ];
  repeated uint64 f_uint64b = 8 [ (json.field) = {
    reference: { repeated: { elem: { uint64: { codec: String } } } }
  } ];

  repeated sint32 f_sint32a = 9 [ (json.field) = {
    reference: { repeated: { elem: { sint32: { codec: Number } } } }
  } ];
  repeated sint32 f_sint32b = 10 [ (json.field) = {
    reference: { repeated: { elem: { sint32: { codec: String } } } }
  } ];

  repeated sint64 f_sint64a = 11 [ (json.field) = {
    reference: { repeated: { elem: { sint64: { codec: Number } } } }
  } ];
  repeated sint64 f_sint64b = 12 [ (json.field) = {
    reference: { repeated: { elem: { sint64: { codec: String } } } }
  } ];

  repeated sfixed32 f_sfixed32a = 13 [ (json.field) = {
    reference: { repeated: { elem: { sfixed32: { codec: Number } } } }
  } ];
  repeated sfixed32 f_sfixed32b = 14 [ (json.field) = {
    reference: { repeated: { elem: { sfixed32: { codec: String } } } }
  } ];

  repeated sfixed64 f_sfixed64a = 15 [ (json.field) = {
    reference: { repeated: { elem: { sfixed64: { codec: Number } } } }
  } ];
  repeated sfixed64 f_sfixed64b = 16 [ (json.field) = {
    reference: { repeated: { elem: { sfixed64: { codec: String } } } }
  } ];

  repeated fixed32 f_fixed32a = 17 [ (json.field) = {
    reference: { repeated: { elem: { fixed32: { codec: Number } } } }
  } ];
  repeated fixed32 f_fixed32b = 18 [ (json.field) = {
    reference: { repeated: { elem: { fixed32: { codec: String } } } }
  } ];

  repeated fixed64 f_fixed64a = 19 [ (json.field) = {
    reference: { repeated: { elem: { fixed64: { codec: Number } } } }
  } ];
  repeated fixed64 f_fixed64b = 20 [ (json.field) = {
    reference: { repeated: { elem: { fixed64: { codec: String } } } }
  } ];

  repeated float f_float1 = 21 [ (json.field) = {
    reference: { repeated: { elem: { float: { codec: Number } } } }
  } ];
  repeated float f_float2 = 22 [ (json.field) = {
    reference: { repeated: { elem: { float: { codec: String } } } }
  } ];

  repeated double f_double1 = 23 [ (json.field) = {
    reference: { repeated: { elem: { double: { codec: Number } } } }
  } ];
  repeated double f_double2 = 24 [ (json.field) = {
    reference: { repeated: { elem: { double: { codec: String } } } }
  } ];

  repeated bool f_bool1 = 25 [ (json.field) = {
    reference: { repeated: { elem: { bool: { codec: Bool } } } }
  } ];
  repeated bool f_bool2 = 27 [ (json.field) = {
    reference: { repeated: { elem: { bool: { codec: String } } } }
  } ];
}
